fix(torrents): torrents list page title too long issues

--- a/modules/core/client/less/mt.less
+++ b/modules/core/client/less/mt.less
@@ -380,6 +380,10 @@ body {
     .se-info {
         color: #ccc;
     }
+    .votes-info {
+        position: absolute;
+        right: 5px;
+    }
 }
 
 .torrent-user-info {
